antlr/grammarrulesgen/GrammarRulesParser.java
// Generated from /Users/admikhailov/IdeaProjects/parserGen/ANTLR/GrammarRules.g4 by ANTLR 4.13.1
package grammarrulesgen;

    import myparserrulesinformation.*;

    import java.util.ArrayList;

    import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
    import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class GrammarRulesParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NAME=1, TERM=2, LETTER=3, OR=4, COLON=5, EQUAL=6, SEMICOLON=7, COMMA=8, 
		LPAREN=9, RPAREN=10, LBRACKET=11, RBRACKET=12, LBRACE=13, RBRACE=14, NEWLINE=15, 
		TAB=16, CLASS=17, STCODE=18, ARGCODE=19, STRING=20, REGEXP=21, WHITESPACE=22;
	public static final int
		RULE_rules = 0, RULE_helperClass = 1, RULE_lexerRuleDeclaration = 2, RULE_parserRuleDeclaration = 3, 
		RULE_signature = 4, RULE_input = 5, RULE_return = 6, RULE_argument = 7, 
		RULE_arguments = 8, RULE_statements = 9, RULE_sequence = 10, RULE_nontermDeclaration = 11, 
		RULE_type = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"rules", "helperClass", "lexerRuleDeclaration", "parserRuleDeclaration", 
			"signature", "input", "return", "argument", "arguments", "statements", 
			"sequence", "nontermDeclaration", "type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'|'", "':'", "'='", "';'", "','", "'('", "')'", 
			"'['", "']'", "'{'", "'}'", null, "'\\t'", null, null, null, null, null, 
			"' '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "NAME", "TERM", "LETTER", "OR", "COLON", "EQUAL", "SEMICOLON", 
			"COMMA", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "LBRACE", "RBRACE", 
			"NEWLINE", "TAB", "CLASS", "STCODE", "ARGCODE", "STRING", "REGEXP", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GrammarRules.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarRulesParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RulesContext extends ParserRuleContext {
		public List<HelperClassContext> helperClass() {
			return getRuleContexts(HelperClassContext.class);
		}
		public HelperClassContext helperClass(int i) {
			return getRuleContext(HelperClassContext.class,i);
		}
		public List<LexerRuleDeclarationContext> lexerRuleDeclaration() {
			return getRuleContexts(LexerRuleDeclarationContext.class);
		}
		public LexerRuleDeclarationContext lexerRuleDeclaration(int i) {
			return getRuleContext(LexerRuleDeclarationContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(GrammarRulesParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(GrammarRulesParser.NEWLINE, i);
		}
		public List<ParserRuleDeclarationContext> parserRuleDeclaration() {
			return getRuleContexts(ParserRuleDeclarationContext.class);
		}
		public ParserRuleDeclarationContext parserRuleDeclaration(int i) {
			return getRuleContext(ParserRuleDeclarationContext.class,i);
		}
		public RulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarRulesListener ) ((GrammarRulesListener)listener).enterRules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarRulesListener ) ((GrammarRulesListener)listener).exitRules(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarRulesVisitor ) return ((GrammarRulesVisitor<? extends T>)visitor).visitRules(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RulesContext rules() throws RecognitionException {
		RulesContext _localctx = new RulesContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_rules);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CLASS) {
				{
				{
				setState(26);
				helperClass();
				}
				}
				setState(31);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(38); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(32);
				lexerRuleDeclaration();
				setState(34); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(33);
						match(NEWLINE);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(36); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				}
				setState(40); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TERM );
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(42);
				match(NEWLINE);
				}
				}
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(54); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(48);
				parserRuleDeclaration();
				setState(50); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(49);
					match(NEWLINE);
					}
					}
					setState(52); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NEWLINE );
				}
				}
				setState(56); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NAME );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HelperClassContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(GrammarRulesParser.CLASS, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(GrammarRulesParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(GrammarRulesParser.NEWLINE, i);
		}
		public HelperClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_helperClass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarRulesListener ) ((GrammarRulesListener)listener).enterHelperClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarRulesListener ) ((GrammarRulesListener)listener).exitHelperClass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarRulesVisitor ) return ((GrammarRulesVisitor<? extends T>)visitor).visitHelperClass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HelperClassContext helperClass() throws RecognitionException {
		HelperClassContext _localctx = new HelperClassContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_helperClass);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(CLASS);
			setState(60); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(59);
				match(NEWLINE);
				}
				}
				setState(62); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LexerRuleDeclarationContext extends ParserRuleContext {
		public TerminalNode TERM() { return getToken(GrammarRulesParser.TERM, 0); }
		public TerminalNode COLON() { return getToken(GrammarRulesParser.COLON, 0); }
		public TerminalNode SEMICOLON() { return getToken(GrammarRulesParser.SEMICOLON, 0); }
		public TerminalNode STRING() { return getToken(GrammarRulesParser.STRING, 0); }
		public TerminalNode REGEXP() { return getToken(GrammarRulesParser.REGEXP, 0); }
		public LexerRuleDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lexerRuleDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarRulesListener ) ((GrammarRulesListener)listener).enterLexerRuleDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarRulesListener ) ((GrammarRulesListener)listener).exitLexerRuleDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarRulesVisitor ) return ((GrammarRulesVisitor<? extends T>)visitor).visitLexerRuleDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LexerRuleDeclarationContext lexerRuleDeclaration() throws RecognitionException {
		LexerRuleDeclarationContext _localctx = new LexerRuleDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_lexerRuleDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(TERM);
			setState(65);
			match(COLON);
			setState(66);
			_la = _input.LA(1);
			if ( !(_la==STRING || _la==REGEXP) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(67);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParserRuleDeclarationContext extends ParserRuleContext {
		public SignatureContext signature() {
			return getRuleContext(SignatureContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public ParserRuleDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parserRuleDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarRulesListener ) ((GrammarRulesListener)listener).enterParserRuleDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarRulesListener ) ((GrammarRulesListener)listener).exitParserRuleDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarRulesVisitor ) return ((GrammarRulesVisitor<? extends T>)visitor).visitParserRuleDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParserRuleDeclarationContext parserRuleDeclaration() throws RecognitionException {
		ParserRuleDeclarationContext _localctx = new ParserRuleDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_parserRuleDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			signature();
			setState(70);
			statements();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SignatureContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(GrammarRulesParser.NAME, 0); }
		public TerminalNode NEWLINE() { return getToken(GrammarRulesParser.NEWLINE, 0); }
		public InputContext input() {
			return getRuleContext(InputContext.class,0);
		}
		public ReturnContext return_() {
			return getRuleContext(ReturnContext.class,0);
		}
		public SignatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_signature; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarRulesListener ) ((GrammarRulesListener)listener).enterSignature(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarRulesListener ) ((GrammarRulesListener)listener).exitSignature(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarRulesVisitor ) return ((GrammarRulesVisitor<? extends T>)visitor).visitSignature(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SignatureContext signature() throws RecognitionException {
		SignatureContext _localctx = new SignatureContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_signature);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(NAME);
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(73);
				input();
				}
			}

			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRACKET) {
				{
				setState(76);
				return_();
				}
			}

			setState(79);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InputContext extends ParserRuleContext {
		public ArrayList<Argument> args;
		public ArgumentsContext arguments;
		public TerminalNode LPAREN() { return getToken(GrammarRulesParser.LPAREN, 0); }
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(GrammarRulesParser.RPAREN, 0); }
		public InputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarRulesListener ) ((GrammarRulesListener)listener).enterInput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarRulesListener ) ((GrammarRulesListener)listener).exitInput(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarRulesVisitor ) return ((GrammarRulesVisitor<? extends T>)visitor).visitInput(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InputContext input() throws RecognitionException {
		InputContext _localctx = new InputContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_input);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(LPAREN);
			setState(82);
			((InputContext)_localctx).arguments = arguments();
			((InputContext)_localctx).args =  ((InputContext)_localctx).arguments.args;
			setState(84);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReturnContext extends ParserRuleContext {
		public Argument oneArg;
		public ArgumentContext argument;
		public TerminalNode LBRACKET() { return getToken(GrammarRulesParser.LBRACKET, 0); }
		public ArgumentContext argument() {
			return getRuleContext(ArgumentContext.class,0);
		}
		public TerminalNode RBRACKET() { return getToken(GrammarRulesParser.RBRACKET, 0); }
		public ReturnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_return; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarRulesListener ) ((GrammarRulesListener)listener).enterReturn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarRulesListener ) ((GrammarRulesListener)listener).exitReturn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarRulesVisitor ) return ((GrammarRulesVisitor<? extends T>)visitor).visitReturn(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnContext return_() throws RecognitionException {
		ReturnContext _localctx = new ReturnContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_return);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(LBRACKET);
			setState(87);
			((ReturnContext)_localctx).argument = argument();
			((ReturnContext)_localctx).oneArg =  ((ReturnContext)_localctx).argument.arg;
			setState(89);
			match(RBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArgumentContext extends ParserRuleContext {
		public Argument arg;
		public TypeContext type;
		public Token NAME;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode NAME() { return getToken(GrammarRulesParser.NAME, 0); }
		public ArgumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argument; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarRulesListener ) ((GrammarRulesListener)listener).enterArgument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarRulesListener ) ((GrammarRulesListener)listener).exitArgument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarRulesVisitor ) return ((GrammarRulesVisitor<? extends T>)visitor).visitArgument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgumentContext argument() throws RecognitionException {
		ArgumentContext _localctx = new ArgumentContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_argument);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			((ArgumentContext)_localctx).type = type();
			setState(92);
			((ArgumentContext)_localctx).NAME = match(NAME);
			((ArgumentContext)_localctx).arg =  new Argument(((ArgumentContext)_localctx).type.typeName, (((ArgumentContext)_localctx).NAME!=null?((ArgumentContext)_localctx).NAME.getText():null));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArgumentsContext extends ParserRuleContext {
		public ArrayList<Argument> args;
		public ArgumentContext a;
		public ArgumentContext b;
		public List<ArgumentContext> argument() {
			return getRuleContexts(ArgumentContext.class);
		}
		public ArgumentContext argument(int i) {
			return getRuleContext(ArgumentContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(GrammarRulesParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GrammarRulesParser.COMMA, i);
		}
		public ArgumentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arguments; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarRulesListener ) ((GrammarRulesListener)listener).enterArguments(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarRulesListener ) ((GrammarRulesListener)listener).exitArguments(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarRulesVisitor ) return ((GrammarRulesVisitor<? extends T>)visitor).visitArguments(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgumentsContext arguments() throws RecognitionException {
		ArgumentsContext _localctx = new ArgumentsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_arguments);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			((ArgumentsContext)_localctx).a = argument();
			((ArgumentsContext)_localctx).args =  new ArrayList<>(); _localctx.args.add(((ArgumentsContext)_localctx).a.arg);
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(97);
				match(COMMA);
				setState(98);
				((ArgumentsContext)_localctx).b = argument();
				_localctx.args.add(((ArgumentsContext)_localctx).b.arg);
				}
				}
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementsContext extends ParserRuleContext {
		public ArrayList<Sequence> rights;
		public SequenceContext a;
		public SequenceContext b;
		public List<TerminalNode> TAB() { return getTokens(GrammarRulesParser.TAB); }
		public TerminalNode TAB(int i) {
			return getToken(GrammarRulesParser.TAB, i);
		}
		public TerminalNode COLON() { return getToken(GrammarRulesParser.COLON, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(GrammarRulesParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(GrammarRulesParser.NEWLINE, i);
		}
		public TerminalNode SEMICOLON() { return getToken(GrammarRulesParser.SEMICOLON, 0); }
		public List<SequenceContext> sequence() {
			return getRuleContexts(SequenceContext.class);
		}
		public SequenceContext sequence(int i) {
			return getRuleContext(SequenceContext.class,i);
		}
		public List<TerminalNode> OR() { return getTokens(GrammarRulesParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(GrammarRulesParser.OR, i);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarRulesListener ) ((GrammarRulesListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarRulesListener ) ((GrammarRulesListener)listener).exitStatements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarRulesVisitor ) return ((GrammarRulesVisitor<? extends T>)visitor).visitStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_statements);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(TAB);
			setState(107);
			match(COLON);
			setState(108);
			((StatementsContext)_localctx).a = sequence();
			((StatementsContext)_localctx).rights =  new ArrayList<>(); _localctx.rights.add(((StatementsContext)_localctx).a.seq);
			setState(110);
			match(NEWLINE);
			setState(119);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(111);
					match(TAB);
					setState(112);
					match(OR);
					setState(113);
					((StatementsContext)_localctx).b = sequence();
					_localctx.rights.add(((StatementsContext)_localctx).b.seq);
					setState(115);
					match(NEWLINE);
					}
					} 
				}
				setState(121);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			setState(122);
			match(TAB);
			setState(123);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SequenceContext extends ParserRuleContext {
		public Sequence seq;
		public NontermDeclarationContext nontermDeclaration;
		public Token TERM;
		public Token STCODE;
		public List<NontermDeclarationContext> nontermDeclaration() {
			return getRuleContexts(NontermDeclarationContext.class);
		}
		public NontermDeclarationContext nontermDeclaration(int i) {
			return getRuleContext(NontermDeclarationContext.class,i);
		}
		public List<TerminalNode> TERM() { return getTokens(GrammarRulesParser.TERM); }
		public TerminalNode TERM(int i) {
			return getToken(GrammarRulesParser.TERM, i);
		}
		public List<TerminalNode> STCODE() { return getTokens(GrammarRulesParser.STCODE); }
		public TerminalNode STCODE(int i) {
			return getToken(GrammarRulesParser.STCODE, i);
		}
		public SequenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sequence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarRulesListener ) ((GrammarRulesListener)listener).enterSequence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarRulesListener ) ((GrammarRulesListener)listener).exitSequence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarRulesVisitor ) return ((GrammarRulesVisitor<? extends T>)visitor).visitSequence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SequenceContext sequence() throws RecognitionException {
		SequenceContext _localctx = new SequenceContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_sequence);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			((SequenceContext)_localctx).seq =  new Sequence();
			setState(133); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(133);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case NAME:
					{
					setState(126);
					((SequenceContext)_localctx).nontermDeclaration = nontermDeclaration();
					_localctx.seq.addDef(((SequenceContext)_localctx).nontermDeclaration.nonTermWithAttrs);
					}
					break;
				case TERM:
					{
					setState(129);
					((SequenceContext)_localctx).TERM = match(TERM);
					_localctx.seq.addDef(new Definition(new Term((((SequenceContext)_localctx).TERM!=null?((SequenceContext)_localctx).TERM.getText():null))));
					}
					break;
				case STCODE:
					{
					setState(131);
					((SequenceContext)_localctx).STCODE = match(STCODE);
					_localctx.seq.addDef(new Definition(new Code((((SequenceContext)_localctx).STCODE!=null?((SequenceContext)_localctx).STCODE.getText():null))));
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(135); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 262150L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
